# tauri-mobile-test

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Features.jsx
src/screens/: Main.jsx  More.jsx  Settings.jsx
