[package]
name = "mobile-test-medium"
version = "0.1.0"
description = "An example application using Tauri Mobile"
authors = ["Ed Rutherford", "dedSyn4ps3"]
license = "MIT"
repository = "https://github.com/dedsyn4ps3/tauri-mobile-test"
edition = "2021"

[lib]
name = "mobile_test_medium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.3", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
